# Midterm

./: .gitignore  Analysis.tex  CountPlot.py  LHCb-CONF.bib  LHCb-PAPER.bib  Makefile  RunCount.sh  Simulation.tex  count.sh  detector.tex  introduction.tex  lhcb-symbols-def.tex  lhcb-symbols-list.tex  main.bib  main.tex  preamble.tex  theory.tex  title-LHCb-ANA.tex  title-LHCb-INT.tex  title-LHCb-PAPER.tex  zmake.sh
Plotting/: ComparableObject.cpp  ComparableObject.cpp~  ComparableObject.hpp  ComparableObject.hpp~  Comparison.cpp  Comparison.hpp  FiveSimRun.cpp  FiveSimRun.cpp~  FiveSimRun.hpp  FiveSimRun.hpp~  MakePlots  MakePlots.cpp  Makefile  Makefile~  SixSimRun.cpp  SixSimRun.hpp
Plotting/BDT/: ExplainBDT.cpp  makefile
Plotting/FakeBDT/: CMakeLists.txt  TMVA.cpp
Plotting/TestEm5/: ComparableObject.cpp  ComparableObject.cpp~  ComparableObject.hpp  Comparison.cpp  Comparison.cpp~  Comparison.hpp  Comparison.hpp~  MakePlots.cpp  Makefile  Makefile~
Plotting/TestEm5/bodge/: bodge  bodge.cpp  bodge.cpp~  makefile
figs/: LambdaDecFeyn.eps
